--- a/index.html
+++ b/index.html
@@ -1,31 +1,51 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="src/styles/extends.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet" />
   <title>Ygor Portes - Portfólio</title>
 </head>
+
 <body>
 
   <nav class="navbar">
     <div class="navbar__content max-with mb-0">
-
-        <a href="/">
-          <img src="src/images/logo.png" alt="Ygor Portes">
-        </a>
-
-        <ul class="navbar__links">
-          <li><a href="#header">Início</a></li>
-          <li><a href="#about">Sobre</a></li>
-          <li><a href="#skills">Habilidades</a></li>
-          <li><a href="projects">Projetos</a></li>
-          <li><a href="footer">Contato</a></li>
-        </ul>
-
+      <a href="/">
+        <img src="src/images/logo.png" alt="Ygor Portes">
+      </a>
+      <ul class="navbar__links">
+        <li><a href="#header">Início</a></li>
+        <li><a href="#about">Sobre</a></li>
+        <li><a href="#skills">Habilidades</a></li>
+        <li><a href="projects">Projetos</a></li>
+        <li><a href="footer">Contato</a></li>
+      </ul>
     </div>
   </nav>
 
+  <header id="header" class="max-with">
+    <div class="header__left">
+      <h1>Ygor Portes Desenvolvedor Fullstack</h1>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque provident, saepe distinctio vero velit itaque
+        architecto labore earum aperiam dolores cum facere dolore incidunt excepturi, officia tempore vitae harum
+        aliquam?
+      </p>
+      <a href="#about" class="btn btn-primary">Saiba Mais!</a>
+    </div>
+    <div class="header__right">
+      <div class="header__image">
+        <img src="src/images/ygor-portes.png" alt="Ygor Portes" class="ygor">
+        <img src="src/images/abstract.svg" alt="background" class="background">
+      </div>
+    </div>
+  </header>
+
   <script src="src/javascript/script.js"></script>
 </body>
+
 </html>
