feat: estrutura HTML da seção Sobre

--- a/index.html
+++ b/index.html
@@ -45,6 +45,31 @@
     </div>
   </header>
 
+  <section id="about" class="about max-with">
+    <div class="about__left">
+      <h2 class="secondary-title">Quem sou eu?</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea voluptatum, molestiae aperiam cumque dicta placeat debitis. Quam quidem eius blanditiis ex laudantium, tempore magni numquam libero, recusandae accusantium vel explicabo!
+      </p>
+      <ul>
+        <li><a href="#"><img src="src/images/linkedin.svg" alt="LinkedIn"></a></li>
+        <li><a href="#"><img src="src/images/github.svg" alt="GitHub"></a></li>
+        <li><a href="#"><img src="src/images/instagram.svg" alt="Instagram"></a></li>
+      </ul>
+    </div>
+    <div class="about__right">
+      <h3 class="tertiary-title mb-m">
+        Desenvolvedor fullstack
+      </h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia natus dolorum, reiciendis nesciunt molestiae libero adipisci. Nulla accusamus, dolorum quibusdam consequatur veritatis aliquid, libero optio quam, omnis labore illum! At?
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem praesentium eaque maiores aliquam voluptatibus, iste sapiente iusto, molestiae dolores repudiandae doloribus sit vel numquam fugiat quia. Distinctio tenetur aspernatur error?
+      </p>
+    </div>
+  </section>
+
   <script src="src/javascript/script.js"></script>
 </body>
 
