feat: estrutura HTML da seção Tecnologias

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 </head>
 
 <body>
-
+  <!-- navbar -->
   <nav class="navbar">
-    <div class="navbar__content max-with mb-0">
+    <div class="navbar__content max-width mb-0">
       <a href="/">
         <img src="src/images/logo.png" alt="Ygor Portes">
       </a>
@@ -28,7 +28,8 @@
     </div>
   </nav>
 
-  <header id="header" class="max-with">
+  <!-- header -->
+  <header id="header" class="max-width">
     <div class="header__left">
       <h1>Ygor Portes Desenvolvedor Fullstack</h1>
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque provident, saepe distinctio vero velit itaque
@@ -45,11 +46,14 @@
     </div>
   </header>
 
-  <section id="about" class="about max-with">
+  <!-- Sobre -->
+  <section id="about" class="about max-width">
     <div class="about__left">
       <h2 class="secondary-title">Quem sou eu?</h2>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea voluptatum, molestiae aperiam cumque dicta placeat debitis. Quam quidem eius blanditiis ex laudantium, tempore magni numquam libero, recusandae accusantium vel explicabo!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea voluptatum, molestiae aperiam cumque dicta placeat
+        debitis. Quam quidem eius blanditiis ex laudantium, tempore magni numquam libero, recusandae accusantium vel
+        explicabo!
       </p>
       <ul>
         <li><a href="#"><img src="src/images/linkedin.svg" alt="LinkedIn"></a></li>
@@ -62,11 +66,94 @@
         Desenvolvedor fullstack
       </h3>
       <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia natus dolorum, reiciendis nesciunt molestiae libero adipisci. Nulla accusamus, dolorum quibusdam consequatur veritatis aliquid, libero optio quam, omnis labore illum! At?
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia natus dolorum, reiciendis nesciunt molestiae
+        libero adipisci. Nulla accusamus, dolorum quibusdam consequatur veritatis aliquid, libero optio quam, omnis
+        labore illum! At?
       </p>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem praesentium eaque maiores aliquam voluptatibus, iste sapiente iusto, molestiae dolores repudiandae doloribus sit vel numquam fugiat quia. Distinctio tenetur aspernatur error?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem praesentium eaque maiores aliquam voluptatibus,
+        iste sapiente iusto, molestiae dolores repudiandae doloribus sit vel numquam fugiat quia. Distinctio tenetur
+        aspernatur error?
       </p>
+    </div>
+  </section>
+
+  <!-- Tecnologias -->
+  <section id="skills" class="skills">
+    <div class="skills__content max-width">
+      <h2 class="tertiary-title">Tecnologias</h2>
+      <p class="description">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptates, ut reprehenderit incidunt odio id
+        pariatur suscipit atque blanditiis. Officia saepe magni eveniet laborum omnis laudantium sit odit at tempore?
+      </p>
+      <ul>
+        <li class="skill__item">
+          <div class="image-container">
+            <img src="src/images/html5.png" alt="HTML5">
+          </div>
+          <h3>HTML</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, voluptas? Minima doloribus fugit deleniti
+            illum, at perferendis dignissimos dolores optio, voluptatum id recusandae autem beatae itaque reiciendis
+            laboriosam corporis quod.
+          </p>
+        </li>
+        <li class="skill__item">
+          <div class="image-container">
+            <img src="src/images/css3.png" alt="CSS3">
+          </div>
+          <h3>CSS</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, voluptas? Minima doloribus fugit deleniti
+            illum, at perferendis dignissimos dolores optio, voluptatum id recusandae autem beatae itaque reiciendis
+            laboriosam corporis quod.
+          </p>
+        </li>
+        <li class="skill__item">
+          <div class="image-container">
+            <img src="src/images/javascript.png" alt="JavaScript">
+          </div>
+          <h3>JavaScript</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, voluptas? Minima doloribus fugit deleniti
+            illum, at perferendis dignissimos dolores optio, voluptatum id recusandae autem beatae itaque reiciendis
+            laboriosam corporis quod.
+          </p>
+        </li>
+        <li class="skill__item">
+          <div class="image-container">
+            <img src="src/images/php.png" alt="PHP">
+          </div>
+          <h3>PHP</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, voluptas? Minima doloribus fugit deleniti
+            illum, at perferendis dignissimos dolores optio, voluptatum id recusandae autem beatae itaque reiciendis
+            laboriosam corporis quod.
+          </p>
+        </li>
+        <li class="skill__item">
+          <div class="image-container">
+            <img src="src/images/mysql.png" alt="MySQL">
+          </div>
+          <h3>MySQL</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, voluptas? Minima doloribus fugit deleniti
+            illum, at perferendis dignissimos dolores optio, voluptatum id recusandae autem beatae itaque reiciendis
+            laboriosam corporis quod.
+          </p>
+        </li>
+        <li class="skill__item">
+          <div class="image-container">
+            <img src="src/images/git.png" alt="Git">
+          </div>
+          <h3>Git</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, voluptas? Minima doloribus fugit deleniti
+            illum, at perferendis dignissimos dolores optio, voluptatum id recusandae autem beatae itaque reiciendis
+            laboriosam corporis quod.
+          </p>
+        </li>
+      </ul>
     </div>
   </section>
 
