feat: estrutura HTML da seção Projetos

--- a/index.html
+++ b/index.html
@@ -157,6 +157,59 @@
     </div>
   </section>
 
+  <!-- Projetos-->
+  <section id="projects" class="projects max-width">
+    <div class="projects__content">
+      <h2 class="secondary-title">Projetos</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, nostrum delectus molestias beatae officia
+        nam quam magni quos qui excepturi itaque ipsum, voluptates in rem quae. Omnis ullam quo tempore.
+      </p>
+    </div>
+    <ul>
+      <li>
+        <div class="image">
+          <img src="src/images/coming-soon.png" alt="Em breve">
+        </div>
+        <div class="projects__info">
+          <h3>Projeto</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non aliquid voluptatibus, neque magni debitis vero vitae excepturi nam expedita iusto, fuga, tempora dicta. Non consectetur voluptatum ducimus id cumque praesentium.</p>
+          <a href="#">Saiba mais &rarr;</a>
+        </div>
+      </li>
+      <li class="projects__reversed-list">
+        <div class="image">
+          <img src="src/images/coming-soon.png" alt="Em breve">
+        </div>
+        <div class="projects__info">
+          <h3>Projeto</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos quidem at doloribus laboriosam, assumenda ea, veritatis sequi enim officiis minus itaque sint aut laudantium incidunt blanditiis dicta eos! Vero, nisi.</p>
+          <a href="#">Saiba mais &rarr;</a>
+        </div>
+      </li>
+      <li>
+        <div class="image">
+          <img src="src/images/coming-soon.png" alt="Em breve">
+        </div>
+        <div class="projects__info">
+          <h3>Projeto</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, ad laborum, error nihil odio impedit voluptate excepturi temporibus veniam, quae suscipit. Voluptatem odio distinctio quasi facere iure at esse quia.</p>
+          <a href="#">Saiba mais &rarr;</a>
+        </div>
+      </li>
+      <li class="projects__reversed-list">
+        <div class="image">
+          <img src="src/images/coming-soon.png" alt="Em breve">
+        </div>
+        <div class="projects__info">
+          <h3>Projeto</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos possimus quaerat velit fuga doloremque beatae laborum rerum laudantium cumque, necessitatibus, magni autem asperiores! In tempora consequuntur tenetur blanditiis inventore ea.</p>
+          <a href="#">Saiba mais &rarr;</a>
+        </div>
+      </li>
+    </ul>
+  </section>
+
   <script src="src/javascript/script.js"></script>
 </body>
 
