feat: estrutura HTML do footer

--- a/index.html
+++ b/index.html
@@ -56,9 +56,12 @@
         explicabo!
       </p>
       <ul>
-        <li><a href="#"><img src="src/images/linkedin.svg" alt="LinkedIn"></a></li>
-        <li><a href="#"><img src="src/images/github.svg" alt="GitHub"></a></li>
-        <li><a href="#"><img src="src/images/instagram.svg" alt="Instagram"></a></li>
+        <li><a href="https://linkedin.com/in/ygorportes" target="_blank"><img src="src/images/linkedin.svg"
+              alt="LinkedIn"></a></li>
+        <li><a href="https://github.com/ygorportes" target="_blank"><img src="src/images/github.svg" alt="GitHub"></a>
+        </li>
+        <li><a href="https://instagram.com/ygor.portes" target="_blank"><img src="src/images/instagram.svg"
+              alt="Instagram"></a></li>
       </ul>
     </div>
     <div class="about__right">
@@ -173,7 +176,9 @@
         </div>
         <div class="projects__info">
           <h3>Projeto</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non aliquid voluptatibus, neque magni debitis vero vitae excepturi nam expedita iusto, fuga, tempora dicta. Non consectetur voluptatum ducimus id cumque praesentium.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non aliquid voluptatibus, neque magni debitis vero
+            vitae excepturi nam expedita iusto, fuga, tempora dicta. Non consectetur voluptatum ducimus id cumque
+            praesentium.</p>
           <a href="#">Saiba mais &rarr;</a>
         </div>
       </li>
@@ -183,7 +188,9 @@
         </div>
         <div class="projects__info">
           <h3>Projeto</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos quidem at doloribus laboriosam, assumenda ea, veritatis sequi enim officiis minus itaque sint aut laudantium incidunt blanditiis dicta eos! Vero, nisi.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos quidem at doloribus laboriosam, assumenda ea,
+            veritatis sequi enim officiis minus itaque sint aut laudantium incidunt blanditiis dicta eos! Vero, nisi.
+          </p>
           <a href="#">Saiba mais &rarr;</a>
         </div>
       </li>
@@ -193,7 +200,9 @@
         </div>
         <div class="projects__info">
           <h3>Projeto</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, ad laborum, error nihil odio impedit voluptate excepturi temporibus veniam, quae suscipit. Voluptatem odio distinctio quasi facere iure at esse quia.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, ad laborum, error nihil odio impedit
+            voluptate excepturi temporibus veniam, quae suscipit. Voluptatem odio distinctio quasi facere iure at esse
+            quia.</p>
           <a href="#">Saiba mais &rarr;</a>
         </div>
       </li>
@@ -203,12 +212,35 @@
         </div>
         <div class="projects__info">
           <h3>Projeto</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos possimus quaerat velit fuga doloremque beatae laborum rerum laudantium cumque, necessitatibus, magni autem asperiores! In tempora consequuntur tenetur blanditiis inventore ea.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos possimus quaerat velit fuga doloremque beatae
+            laborum rerum laudantium cumque, necessitatibus, magni autem asperiores! In tempora consequuntur tenetur
+            blanditiis inventore ea.</p>
           <a href="#">Saiba mais &rarr;</a>
         </div>
       </li>
     </ul>
   </section>
+
+  <!-- Footer -->
+  <footer id="footer">
+    <div class="footer__content max-width mb-0">
+      <h2 class="tertiary-title mb-s">Contato</h2>
+      <div class="footer__contact mb-m">
+        <span class="mb-m">ygorsportes@gmail.com</span>
+      </div>
+      <ul class="mb-l">
+        <li><a href="https://linkedin.com/in/ygorportes" target="_blank"><img src="src/images/linkedin.svg"
+              alt="LinkedIn"></a></li>
+        <li><a href="https://github.com/ygorportes" target="_blank"><img src="src/images/github.svg" alt="GitHub"></a>
+        </li>
+        <li><a href="https://instagram.com/ygor.portes" target="_blank"><img src="src/images/instagram.svg"
+              alt="Instagram"></a></li>
+      </ul>
+      <p class="footer__copyright">
+        &copy; 2025 Ygor Portes
+      </p>
+    </div>
+  </footer>
 
   <script src="src/javascript/script.js"></script>
 </body>
