refactor: ajusta conteúdo do index.html

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <li><a href="#header">Início</a></li>
         <li><a href="#about">Sobre</a></li>
         <li><a href="#skills">Habilidades</a></li>
-        <li><a href="projects">Projetos</a></li>
-        <li><a href="footer">Contato</a></li>
+        <li><a href="#projects">Projetos</a></li>
+        <li><a href="#footer">Contato</a></li>
       </ul>
       <div class="navbar__mobile">
         <img src="src/images/menu.svg" alt="Menu" class="burguer">
@@ -31,8 +31,8 @@
           <li><a href="#header">Início</a></li>
           <li><a href="#about">Sobre</a></li>
           <li><a href="#skills">Habilidades</a></li>
-          <li><a href="projects">Projetos</a></li>
-          <li><a href="footer">Contato</a></li>
+          <li><a href="#projects">Projetos</a></li>
+          <li><a href="#footer">Contato</a></li>
         </ul>
       </div>
     </div>
@@ -42,10 +42,8 @@
   <header id="header" class="max-width">
     <div class="header__left">
       <h1>Ygor Portes Desenvolvedor Fullstack</h1>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque provident, saepe distinctio vero velit itaque
-        architecto labore earum aperiam dolores cum facere dolore incidunt excepturi, officia tempore vitae harum
-        aliquam?
-      </p>
+      <p>Sou estudante de Análise e Desenvolvimento de Sistemas e estou focando meus estudos em HTML, CSS e JavaScript.
+        Criei este portfólio para praticar e reunir o que venho aprendendo.</p>
       <a href="#about" class="btn btn-primary">Saiba Mais!</a>
     </div>
     <div class="header__right">
@@ -60,11 +58,8 @@
   <section id="about" class="about max-width">
     <div class="about__left">
       <h2 class="secondary-title">Quem sou eu?</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea voluptatum, molestiae aperiam cumque dicta placeat
-        debitis. Quam quidem eius blanditiis ex laudantium, tempore magni numquam libero, recusandae accusantium vel
-        explicabo!
-      </p>
+      <p>Meu nome é Ygor Portes, estou no 4º semestre de Análise e Desenvolvimento de Sistemas. No momento, estou
+        direcionando meus estudos para desenvolvimento web, com foco em HTML, CSS e JavaScript.</p>
       <ul>
         <li><a href="https://linkedin.com/in/ygorportes" target="_blank"><img src="src/images/linkedin.svg"
               alt="LinkedIn"></a></li>
@@ -75,19 +70,11 @@
       </ul>
     </div>
     <div class="about__right">
-      <h3 class="tertiary-title mb-m">
-        Desenvolvedor fullstack
-      </h3>
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia natus dolorum, reiciendis nesciunt molestiae
-        libero adipisci. Nulla accusamus, dolorum quibusdam consequatur veritatis aliquid, libero optio quam, omnis
-        labore illum! At?
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem praesentium eaque maiores aliquam voluptatibus,
-        iste sapiente iusto, molestiae dolores repudiandae doloribus sit vel numquam fugiat quia. Distinctio tenetur
-        aspernatur error?
-      </p>
+      <h3 class="tertiary-title mb-m">Desenvolvedor fullstack</h3>
+      <p>Também tenho conhecimentos em PHP e MySQL, o que me permite trabalhar com aplicações fullstack em projetos
+        simples.</p>
+      <p>Atualmente trabalho com suporte técnico na área de TEF. Tenho facilidade em aprender, costumo buscar soluções
+        para os problemas e me adapto bem ao trabalho em equipe.</p>
     </div>
   </section>
 
@@ -95,89 +82,55 @@
   <section id="skills" class="skills">
     <div class="skills__content max-width">
       <h2 class="tertiary-title">Tecnologias</h2>
-      <p class="description">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptates, ut reprehenderit incidunt odio id
-        pariatur suscipit atque blanditiis. Officia saepe magni eveniet laborum omnis laudantium sit odit at tempore?
-      </p>
+      <p class="description">Estas são as tecnologias que venho estudando e utilizando no momento. Algumas com mais
+        prática, outras ainda em fase de aprendizado, mas todas fazem parte do meu processo de evolução.</p>
       <ul>
         <li class="skill__item">
           <div class="image-container">
             <img src="src/images/html5.png" alt="HTML5">
           </div>
           <h3>HTML</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, voluptas? Minima doloribus fugit deleniti
-            illum, at perferendis dignissimos dolores optio, voluptatum id recusandae autem beatae itaque reiciendis
-            laboriosam corporis quod.
-          </p>
         </li>
         <li class="skill__item">
           <div class="image-container">
             <img src="src/images/css3.png" alt="CSS3">
           </div>
           <h3>CSS</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, voluptas? Minima doloribus fugit deleniti
-            illum, at perferendis dignissimos dolores optio, voluptatum id recusandae autem beatae itaque reiciendis
-            laboriosam corporis quod.
-          </p>
         </li>
         <li class="skill__item">
           <div class="image-container">
             <img src="src/images/javascript.png" alt="JavaScript">
           </div>
           <h3>JavaScript</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, voluptas? Minima doloribus fugit deleniti
-            illum, at perferendis dignissimos dolores optio, voluptatum id recusandae autem beatae itaque reiciendis
-            laboriosam corporis quod.
-          </p>
         </li>
         <li class="skill__item">
           <div class="image-container">
             <img src="src/images/php.png" alt="PHP">
           </div>
           <h3>PHP</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, voluptas? Minima doloribus fugit deleniti
-            illum, at perferendis dignissimos dolores optio, voluptatum id recusandae autem beatae itaque reiciendis
-            laboriosam corporis quod.
-          </p>
         </li>
         <li class="skill__item">
           <div class="image-container">
             <img src="src/images/mysql.png" alt="MySQL">
           </div>
           <h3>MySQL</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, voluptas? Minima doloribus fugit deleniti
-            illum, at perferendis dignissimos dolores optio, voluptatum id recusandae autem beatae itaque reiciendis
-            laboriosam corporis quod.
-          </p>
         </li>
         <li class="skill__item">
           <div class="image-container">
             <img src="src/images/git.png" alt="Git">
           </div>
           <h3>Git</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, voluptas? Minima doloribus fugit deleniti
-            illum, at perferendis dignissimos dolores optio, voluptatum id recusandae autem beatae itaque reiciendis
-            laboriosam corporis quod.
-          </p>
         </li>
       </ul>
     </div>
   </section>
 
-  <!-- Projetos-->
+  <!-- Projetos -->
   <section id="projects" class="projects max-width">
     <div class="projects__content">
       <h2 class="secondary-title">Projetos</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, nostrum delectus molestias beatae officia
-        nam quam magni quos qui excepturi itaque ipsum, voluptates in rem quae. Omnis ullam quo tempore.
-      </p>
+      <p>Esta seção irá reunir projetos criados durante meus estudos. Exemplos simples que servirão como prática e registro
+        do meu progresso na área de desenvolvimento web.</p>
     </div>
     <ul>
       <li>
@@ -185,10 +138,8 @@
           <img src="src/images/coming-soon.png" alt="Em breve">
         </div>
         <div class="projects__info">
-          <h3>Projeto</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non aliquid voluptatibus, neque magni debitis vero
-            vitae excepturi nam expedita iusto, fuga, tempora dicta. Non consectetur voluptatum ducimus id cumque
-            praesentium.</p>
+          <h3>Em Breve</h3>
+          <p>Projeto em construção...</p>
           <a href="#">Saiba mais &rarr;</a>
         </div>
       </li>
@@ -197,34 +148,8 @@
           <img src="src/images/coming-soon.png" alt="Em breve">
         </div>
         <div class="projects__info">
-          <h3>Projeto</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos quidem at doloribus laboriosam, assumenda ea,
-            veritatis sequi enim officiis minus itaque sint aut laudantium incidunt blanditiis dicta eos! Vero, nisi.
-          </p>
-          <a href="#">Saiba mais &rarr;</a>
-        </div>
-      </li>
-      <li>
-        <div class="image">
-          <img src="src/images/coming-soon.png" alt="Em breve">
-        </div>
-        <div class="projects__info">
-          <h3>Projeto</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, ad laborum, error nihil odio impedit
-            voluptate excepturi temporibus veniam, quae suscipit. Voluptatem odio distinctio quasi facere iure at esse
-            quia.</p>
-          <a href="#">Saiba mais &rarr;</a>
-        </div>
-      </li>
-      <li class="projects__reversed-list">
-        <div class="image">
-          <img src="src/images/coming-soon.png" alt="Em breve">
-        </div>
-        <div class="projects__info">
-          <h3>Projeto</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos possimus quaerat velit fuga doloremque beatae
-            laborum rerum laudantium cumque, necessitatibus, magni autem asperiores! In tempora consequuntur tenetur
-            blanditiis inventore ea.</p>
+          <h3>Em Breve</h3>
+          <p>Projeto em construção...</p>
           <a href="#">Saiba mais &rarr;</a>
         </div>
       </li>
