feat: adiciona projetos reais na seção Projetos

--- a/index.html
+++ b/index.html
@@ -129,28 +129,33 @@
   <section id="projects" class="projects max-width">
     <div class="projects__content">
       <h2 class="secondary-title">Projetos</h2>
-      <p>Esta seção irá reunir projetos criados durante meus estudos. Exemplos simples que servirão como prática e registro
+      <p>Esta seção reúne projetos criados durante meus estudos. Exemplos simples que servem como prática e
+        registro
         do meu progresso na área de desenvolvimento web.</p>
     </div>
     <ul>
       <li>
         <div class="image">
-          <img src="src/images/coming-soon.png" alt="Em breve">
+          <img src="src/images/weather-forecast.png" alt="Previsão do Tempo">
         </div>
         <div class="projects__info">
-          <h3>Em Breve</h3>
-          <p>Projeto em construção...</p>
-          <a href="#">Saiba mais &rarr;</a>
+          <h3>Previsão do Tempo ☀️</h3>
+          <p>Um projeto simples de previsão do tempo onde você pode buscar qualquer cidade e visualizar as principais
+            informações climáticas, como: Temperatura atual, temperatura máxima e mínima, umidade do ar, velocidade do
+            vento e descrição do clima com ícone ilustrativo.</p>
+          <a href="https://ygorportes.github.io/weather-forecast/" target="_blank">Ver projeto &rarr;</a>
         </div>
       </li>
       <li class="projects__reversed-list">
         <div class="image">
-          <img src="src/images/coming-soon.png" alt="Em breve">
+          <img src="src/images/password-generator.png" alt="Gerador de Senhas">
         </div>
         <div class="projects__info">
-          <h3>Em Breve</h3>
-          <p>Projeto em construção...</p>
-          <a href="#">Saiba mais &rarr;</a>
+          <h3>Gerador de Senhas</h3>
+          <p>Este é um projeto simples de gerador de senhas desenvolvido com HTML, CSS e JavaScript. O usuário pode
+            definir o tamanho da senha (entre 4 e 128 caracteres) e escolher se deseja incluir: Letras maiúsculas,
+            letras minúsculas, números e caracteres especiais.</p>
+          <a href="https://ygorportes.github.io/password-generator/" target="_blank">Ver projeto &rarr;</a>
         </div>
       </li>
     </ul>
