fix: adiciona rel=noopener noreferrer nos links externos

--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
       <p>Meu nome é Ygor Portes, estou no 4º semestre de Análise e Desenvolvimento de Sistemas. No momento, estou
         direcionando meus estudos para desenvolvimento web, com foco em HTML, CSS e JavaScript.</p>
       <ul>
-        <li><a href="https://linkedin.com/in/ygorportes" target="_blank"><img src="src/images/about/linkedin.svg"
+        <li><a href="https://linkedin.com/in/ygorportes" target="_blank" rel="noopener noreferrer"><img src="src/images/about/linkedin.svg"
               alt="LinkedIn"></a></li>
-        <li><a href="https://github.com/ygorportes" target="_blank"><img src="src/images/about/github.svg" alt="GitHub"></a>
+        <li><a href="https://github.com/ygorportes" target="_blank" rel="noopener noreferrer"><img src="src/images/about/github.svg" alt="GitHub"></a>
         </li>
-        <li><a href="https://instagram.com/ygor.portes" target="_blank"><img src="src/images/about/instagram.svg"
+        <li><a href="https://instagram.com/ygor.portes" target="_blank" rel="noopener noreferrer"><img src="src/images/about/instagram.svg"
               alt="Instagram"></a></li>
       </ul>
     </div>
@@ -142,7 +142,7 @@
         <div class="projects__info">
           <h3>Landing Page - Docerias</h3>
           <p>Uma landing page simples e responsiva desenvolvida com HTML, CSS e JavaScript, ideal para apresentação de produtos ou serviços.</p>
-          <a href="https://ygorportes.github.io/landing-page-candy-theme/" target="_blank">Ver projeto &rarr;</a>
+          <a href="https://ygorportes.github.io/landing-page-candy-theme/" target="_blank" rel="noopener noreferrer">Ver projeto &rarr;</a>
         </div>
       </li>
       <li class="projects__reversed-list">
@@ -154,7 +154,7 @@
           <p>Um projeto simples de previsão do tempo onde você pode buscar qualquer cidade e visualizar as principais
             informações climáticas, como: Temperatura atual, temperatura máxima e mínima, umidade do ar, velocidade do
             vento e descrição do clima com ícone ilustrativo.</p>
-          <a href="https://ygorportes.github.io/weather-forecast/" target="_blank">Ver projeto &rarr;</a>
+          <a href="https://ygorportes.github.io/weather-forecast/" target="_blank" rel="noopener noreferrer">Ver projeto &rarr;</a>
         </div>
       </li>
       <li class="projects-list">
@@ -166,7 +166,7 @@
           <p>Este é um projeto simples de gerador de senhas desenvolvido com HTML, CSS e JavaScript. O usuário pode
             definir o tamanho da senha (entre 4 e 128 caracteres) e escolher se deseja incluir: Letras maiúsculas,
             letras minúsculas, números e caracteres especiais.</p>
-          <a href="https://ygorportes.github.io/password-generator/" target="_blank">Ver projeto &rarr;</a>
+          <a href="https://ygorportes.github.io/password-generator/" target="_blank" rel="noopener noreferrer">Ver projeto &rarr;</a>
         </div>
       </li>
     </ul>
@@ -180,11 +180,11 @@
         <span class="mb-m">ygorsportes@gmail.com</span>
       </div>
       <ul class="mb-l">
-        <li><a href="https://linkedin.com/in/ygorportes" target="_blank"><img src="src/images/about/linkedin.svg"
+        <li><a href="https://linkedin.com/in/ygorportes" target="_blank" rel="noopener noreferrer"><img src="src/images/about/linkedin.svg"
               alt="LinkedIn"></a></li>
-        <li><a href="https://github.com/ygorportes" target="_blank"><img src="src/images/about/github.svg" alt="GitHub"></a>
+        <li><a href="https://github.com/ygorportes" target="_blank" rel="noopener noreferrer"><img src="src/images/about/github.svg" alt="GitHub"></a>
         </li>
-        <li><a href="https://instagram.com/ygor.portes" target="_blank"><img src="src/images/about/instagram.svg"
+        <li><a href="https://instagram.com/ygor.portes" target="_blank" rel="noopener noreferrer"><img src="src/images/about/instagram.svg"
               alt="Instagram"></a></li>
       </ul>
       <p class="footer__copyright">
