--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         <li><a href="#footer">Contato</a></li>
       </ul>
       <div class="navbar__mobile">
-        <img src="src/images/navbar/menu.svg" alt="Menu" class="burguer">
-        <ul class="mobile__links">
-          <li><a href="#header">Início</a></li>
-          <li><a href="#about">Sobre</a></li>
-          <li><a href="#skills">Habilidades</a></li>
-          <li><a href="#projects">Projetos</a></li>
-          <li><a href="#footer">Contato</a></li>
+        <img src="src/images/navbar/menu.svg" alt="Menu" class="burguer" role="button" aria-label="Abrir menu" aria-expanded="false" aria-controls="mobile-links" tabindex="0">
+        <ul class="mobile__links" id="mobile-links" role="menu">
+          <li><a href="#header" role="menuitem">Início</a></li>
+          <li><a href="#about" role="menuitem">Sobre</a></li>
+          <li><a href="#skills" role="menuitem">Habilidades</a></li>
+          <li><a href="#projects" role="menuitem">Projetos</a></li>
+          <li><a href="#footer" role="menuitem">Contato</a></li>
         </ul>
       </div>
     </div>
