fix: ajusta link do logo para âncora local

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- navbar -->
   <nav class="navbar">
     <div class="navbar__content max-width mb-0">
-      <a href="/">
+      <a href="#header">
         <img src="src/images/navbar/logo.png" alt="Ygor Portes">
       </a>
       <ul class="navbar__links">
