--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Portfólio de Ygor Portes: projetos em HTML, CSS, JavaScript, PHP e MySQL. Desenvolvedor fullstack em formação com foco em desenvolvimento web.">
+  <meta name="keywords" content="Ygor Portes, portfólio, desenvolvedor, frontend, fullstack, HTML, CSS, JavaScript, PHP, MySQL, projetos">
   <link rel="stylesheet" href="src/styles/extends.css">
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
