--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
       <p>Meu nome é Ygor Portes, estou no 4º semestre de Análise e Desenvolvimento de Sistemas. No momento, estou
         direcionando meus estudos para desenvolvimento web, com foco em HTML, CSS e JavaScript.</p>
       <ul>
-        <li><a href="https://linkedin.com/in/ygorportes" target="_blank" rel="noopener noreferrer"><img src="src/images/about/linkedin.svg"
+        <li><a href="https://linkedin.com/in/ygorportes" target="_blank" rel="noopener noreferrer"><img src="src/images/about/linkedin.svg" loading="lazy"
               alt="LinkedIn"></a></li>
-        <li><a href="https://github.com/ygorportes" target="_blank" rel="noopener noreferrer"><img src="src/images/about/github.svg" alt="GitHub"></a>
+        <li><a href="https://github.com/ygorportes" target="_blank" rel="noopener noreferrer"><img src="src/images/about/github.svg" loading="lazy" alt="GitHub"></a>
         </li>
-        <li><a href="https://instagram.com/ygor.portes" target="_blank" rel="noopener noreferrer"><img src="src/images/about/instagram.svg"
+        <li><a href="https://instagram.com/ygor.portes" target="_blank" rel="noopener noreferrer"><img src="src/images/about/instagram.svg" loading="lazy"
               alt="Instagram"></a></li>
       </ul>
     </div>
@@ -90,37 +90,37 @@
       <ul>
         <li class="skill__item">
           <div class="image-container">
-            <img src="src/images/skills/html5.png" alt="HTML5">
+            <img src="src/images/skills/html5.png" alt="HTML5" loading="lazy">
           </div>
           <h3>HTML</h3>
         </li>
         <li class="skill__item">
           <div class="image-container">
-            <img src="src/images/skills/css3.png" alt="CSS3">
+            <img src="src/images/skills/css3.png" alt="CSS3" loading="lazy">
           </div>
           <h3>CSS</h3>
         </li>
         <li class="skill__item">
           <div class="image-container">
-            <img src="src/images/skills/javascript.png" alt="JavaScript">
+            <img src="src/images/skills/javascript.png" alt="JavaScript" loading="lazy">
           </div>
           <h3>JavaScript</h3>
         </li>
         <li class="skill__item">
           <div class="image-container">
-            <img src="src/images/skills/php.png" alt="PHP">
+            <img src="src/images/skills/php.png" alt="PHP" loading="lazy">
           </div>
           <h3>PHP</h3>
         </li>
         <li class="skill__item">
           <div class="image-container">
-            <img src="src/images/skills/mysql.png" alt="MySQL">
+            <img src="src/images/skills/mysql.png" alt="MySQL" loading="lazy">
           </div>
           <h3>MySQL</h3>
         </li>
         <li class="skill__item">
           <div class="image-container">
-            <img src="src/images/skills/git.png" alt="Git">
+            <img src="src/images/skills/git.png" alt="Git" loading="lazy">
           </div>
           <h3>Git</h3>
         </li>
@@ -139,7 +139,7 @@
     <ul>
       <li class="projects-list">
         <div class="image">
-          <img src="src/images/projects/landing-page-candy-theme.png" alt="Landing Page">
+          <img src="src/images/projects/landing-page-candy-theme.png" alt="Landing Page" loading="lazy">
         </div>
         <div class="projects__info">
           <h3>Landing Page - Docerias</h3>
@@ -149,7 +149,7 @@
       </li>
       <li class="projects__reversed-list">
         <div class="image">
-          <img src="src/images/projects/weather-forecast.png" alt="Previsão do Tempo">
+          <img src="src/images/projects/weather-forecast.png" alt="Previsão do Tempo" loading="lazy">
         </div>
         <div class="projects__info">
           <h3>Previsão do Tempo ☀️</h3>
@@ -161,7 +161,7 @@
       </li>
       <li class="projects-list">
         <div class="image">
-          <img src="src/images/projects/password-generator.png" alt="Gerador de Senhas">
+          <img src="src/images/projects/password-generator.png" alt="Gerador de Senhas" loading="lazy">
         </div>
         <div class="projects__info">
           <h3>Gerador de Senhas</h3>
@@ -182,11 +182,11 @@
         <span class="mb-m">ygorsportes@gmail.com</span>
       </div>
       <ul class="mb-l">
-        <li><a href="https://linkedin.com/in/ygorportes" target="_blank" rel="noopener noreferrer"><img src="src/images/about/linkedin.svg"
+        <li><a href="https://linkedin.com/in/ygorportes" target="_blank" rel="noopener noreferrer"><img src="src/images/about/linkedin.svg" loading="lazy"
               alt="LinkedIn"></a></li>
-        <li><a href="https://github.com/ygorportes" target="_blank" rel="noopener noreferrer"><img src="src/images/about/github.svg" alt="GitHub"></a>
+        <li><a href="https://github.com/ygorportes" target="_blank" rel="noopener noreferrer"><img src="src/images/about/github.svg" loading="lazy" alt="GitHub"></a>
         </li>
-        <li><a href="https://instagram.com/ygor.portes" target="_blank" rel="noopener noreferrer"><img src="src/images/about/instagram.svg"
+        <li><a href="https://instagram.com/ygor.portes" target="_blank" rel="noopener noreferrer"><img src="src/images/about/instagram.svg" loading="lazy"
               alt="Instagram"></a></li>
       </ul>
       <p class="footer__copyright">
