--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet" />
-  <script src="https://unpkg.com/scrollreveal"></script>
+  <script src="https://unpkg.com/scrollreveal" defer></script>
   <title>Ygor Portes - Portfólio</title>
 </head>
 
@@ -52,7 +52,7 @@
     <div class="header__right">
       <div class="header__image">
         <img src="src/images/header/ygor-portes.png" alt="Ygor Portes" class="ygor">
-        <img src="src/images/header/abstract.svg" alt="background" class="background">
+        <img src="src/images/header/abstract.svg" alt="" aria-hidden="true" class="background">
       </div>
     </div>
   </header>
@@ -195,7 +195,7 @@
     </div>
   </footer>
 
-  <script src="src/javascript/script.js"></script>
+  <script src="src/javascript/script.js" defer></script>
 </body>
 
 </html>
